[gd_scene load_steps=4 format=3 uid="uid://bybn84wnnrply"]

[ext_resource type="Script" uid="uid://8a4iubb8ybkh" path="res://Scripts/Ui/Science/ScienceButton.gd" id="1_nugib"]
[ext_resource type="PackedScene" uid="uid://bvbrgdq1ak610" path="res://Scenes/UI/CustomParts/CustomButton.tscn" id="2_1ub8i"]
[ext_resource type="Texture2D" uid="uid://dyuwkn7jagh0" path="res://Assets/GUI/Panels/CornersSilver.png" id="3_1ub8i"]

[node name="ScienceButton" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nugib")

[node name="CustomButton" parent="." instance=ExtResource("2_1ub8i")]
angle = ExtResource("3_1ub8i")

[connection signal="pressed" from="CustomButton" to="." method="on_pressed"]
